<resources>
    <string name="app_name">RefereePreMatch</string>
    <string name="created">Created by:</string>
    <string name="email">Email</string>
    <string name="login">Acceder</string>
    <string name="arbitrocuenta">Árbitro</string>
    <string name="arbitros">Árbitros</string>
    <string name="partidos">Partidos</string>
    <string name="recibos">Recibo</string>
    <string name="informes">Informes</string>
    <string name="delegado">Delegado</string>
    <string name="estadios">Estadios</string>
    <string name="registro">En caso de no recordar la clave o no tener acceso. Por favor, contacte con su delegado</string>
    <string name="ajustes">Ajustes</string>
    <string name="idioma">Idioma</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sobrenosotros">Acerca de</string>
    <string name="Version">Versión: 1.0. 2021</string>
    <string name="infolegal">Información legal</string>
    <string name="readme"> Readme</string>
    <string name="licencia"> Licencia</string>
    <string name="terminosuso">Términos de uso</string>
    <string name="privacidad">Privacidad</string>
    <string name="nuevo">Nuevo</string>
    <string-array name="crearnuevoDelegado">
        <item>Seleccione el nuevo dato</item>
        <item>Arbitro</item>
        <item>Estadio</item>
        <item>Recibo</item>
        <item>Partido</item>
    </string-array>
    <string-array name="crearnuevoArbitro">
        <item>Seleccione el nuevo dato</item>
        <item>Arbitro</item>
    </string-array>
</resources>